# comtrade-io

./: .gitignore  LICENSE  README.md  README_zh.md  binary_1999.cfg  binary_1999.dmf  binary_1999.inf  pyproject.toml
.github/workflows/: publish.yml
docs/modules/: README.md  comtrade.md  comtrade_file.md  comtrade_model.md
docs/modules/cff/: cff.md
docs/modules/cfg/: configure.md
docs/modules/data/: data_content.md
docs/modules/inf/: information.md
src/comtrade_io/: .env  __init__.py  cff_splitter.py  comtrade.py  comtrade_file.py  comtrade_model.py
src/comtrade_io/base/: __init__.py  channel.py  description.py  index_base.py  precision_time.py
src/comtrade_io/cff/: __init__.py  cff.py
src/comtrade_io/cfg/: __init__.py  analog.py  analog_dispose.py  cfg_channel_model.py  channel_cfg.py  channel_num.py  configure.py  digital.py  header.py  nrate.py  sampling.py  sampling_time_quality.py  segment.py  status.py  status_dispose.py  time_info.py
src/comtrade_io/channel/: __init__.py  analog.py  channel.py  status.py
src/comtrade_io/config/: channel_patterns.json
src/comtrade_io/data/: __init__.py  data_content.py
src/comtrade_io/dmf/: __init__.py  analog_channel.py  analog_element.py  branch.py  bus.py  bus_element.py  (+13 more)
tests/: __init__.py
tests/comtrade_io/: test_cff.py  test_comtrade.py  test_comtrade_file.py
tests/data/: analog_channel_test.data.json  analog_test_data.json  ascii_1991.cfg  ascii_1991.hdr  ascii_1999.cfg  ascii_1999.dmf  ascii_1999.hdr  ascii_cff_2013.cff  binary_1999.cfg  binary_inf.cfg  binary_inf.inf  digital_test_data.json
(+77 files in other folders)
